# sfu-gateway

./: Cargo.toml  LICENSE  README.md  rustfmt.toml  secrets.example.toml
.github/workflows/: test.yml
doc/: implementation.md  integration.md  load_balancing.md  roadmap.md
src/: auth.rs  balancer.rs  config.rs  geo.rs  handlers.rs  lib.rs  main.rs
src/config/: mod.rs  types.rs
src/http/: handlers.rs  mod.rs  server.rs
src/routing/: balancer.rs  geo.rs  mod.rs
tests/: auth_tests.rs  forwarding_tests.rs  routing_tests.rs
tests/common/: mod.rs
