[package]
name = "sfu-gateway"
version = "0.1.0"
edition = "2021"
description = "Gateway/load-balancer for SFU instances"
license-file = "LICENSE"
repository = "https://github.com/ThanhDodeurOdoo/sfu-gateway"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
jsonwebtoken = "9"
base64 = "0.22"
