[package]
name = "sfu-gateway"
version = "0.1.0"
edition = "2024"
description = "Gateway/load-balancer for SFU instances"
license-file = "LICENSE"
repository = "https://github.com/ThanhDodeurOdoo/sfu-gateway"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
jsonwebtoken = "9"
base64 = "0.22"

[dev-dependencies]
serial_test = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy] # https://rust-lang.github.io/rust-clippy/
correctness = { level="deny", priority = -1 }
suspicious = { level="deny", priority = -1 }
unwrap_used = { level="deny", priority = -1 }
expect_used = { level="deny", priority = -1 }
panic = { level="deny", priority = -1 }

pedantic = "warn"
perf = "warn"
complexity = "warn"
style = "warn"

# nursery as of rust 1.92 https://rust-lang.github.io/rust-clippy/rust-1.92.0/index.html?groups=nursery
needless_pass_by_ref_mut = "warn"
redundant_clone = "warn"
nonstandard_macro_braces = "warn"
option_if_let_else = "warn"
single_option_map = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_struct_initialization = "warn"
use_self = "warn"
